--- a/index.html
+++ b/index.html
@@ -2,38 +2,34 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Casio Mini</title>
-		<link rel="stylesheet" href="styles/style.css" />
-		<script src="scripts/calculator.js"></script>
+		<title>Wikipraktika | Taschenrechner - tragbare, handliche elektronische Rechenmaschine</title>
+
+		<!-- TODO: author, publisher, description, bookmark icon -->
+
+		<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 	</head>
 	<body>
-		<form>
-			<fieldset class="display">
-				<output name="output" id="output" class="output"></output>
-				<output name="input" id="input" class="input"></output>
-			</fieldset>
+		<header>
+			<!-- TODO -->
 
-			<fieldset>
-				<button type="button" name="key-0" id="key-0" class="number" value="0">0</button>
-				<button type="button" name="key-1" id="key-1" class="number" value="1">1</button>
-				<button type="button" name="key-2" id="key-2" class="number" value="2">2</button>
-				<button type="button" name="key-+" id="key-+" value="+" class="operator">&plus;</button>
+			<h1>Wikipraktika</h1>
+		</header>
 
-				<button type="button" name="key-3" id="key-3" class="number" value="3">3</button>
-				<button type="button" name="key-4" id="key-4" class="number" value="4">4</button>
-				<button type="button" name="key-5" id="key-5" class="number" value="5">5</button>
-				<button type="button" name="key--" id="key--" value="-" class="operator">&minus;</button>
+		<!-- TODO navigation-->
 
-				<button type="button" name="key-6" id="key-6" class="number" value="6">6</button>
-				<button type="button" name="key-7" id="key-7" class="number" value="7">7</button>
-				<button type="button" name="key-8" id="key-8" class="number" value="8">8</button>
-				<button type="button" name="key-*" id="key-*" value="*" class="operator">&lowast;</button>
 
-				<button type="button" name="key-9" id="key-9" class="number" value="9">9</button>
-				<button type="button" name="key-c" id="key-c" class="command">C</button>
-				<button type="button" name="key-=" id="key-=" class="command">&equals;</button>
-				<button type="button" name="key-/" id="key-/" value="/" class="operator">&divide;</button>
-			</fieldset>
-		</form>
+		<main>
+			<!-- Schriftgrössenwechsler: optionale Aufgabe -->
+			<form id="font-size-form">
+				<label for="font-slider">Schriftgrösse</label>
+				<input type="range" min="8" max="20" step="1" value="10" title="1" name="font-slider"
+					   id="font-slider" />
+				<output name="font-size" id="font-size">1</output>
+			</form>
+
+			<!-- TODO -->
+		</main>
+
+		<!-- TODO -->
 	</body>
 </html>
