--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
             können also etwa Gleichungen umstellen oder lösen.</p>
         <p>Praktisch alle heutigen Taschenrechner verwenden elektronische Integrierte Schaltungen und
             LC-Displays als Anzeige und werden von einer Batterie oder Solarzelle mit Strom versorgt.</p>
-        <img src="./media/900px-SCM_Marchant_calculator.jpg" />
-        <p>By <a rel="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a rel="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</p>
+        <div>
+            <img src="./media/900px-SCM_Marchant_calculator.jpg" />
+            <p>By <a href="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</p>
+        </div>
 
-        Geschichte:
-        Bereits vor der Einführung der elektronischen Taschenrechner gab es einen Bedarf nach
+        <h3>Geschichte</h3>
+        <p>Bereits vor der Einführung der elektronischen Taschenrechner gab es einen Bedarf nach
         tragbaren Rechenhilfen. Dieser wurde mit mechanischen Taschenrechnern und Rechenschiebern
         befriedigt. Meist handelte es sich dabei um einfache Addiermaschinen. Auch
         Vier-Spezies-Maschinen – also Rechenmaschinen, die Addition, Subtraktion, Multiplikation und
-        Division beherrschten – gab es in taschentauglicher Größe. Bekanntestes Beispiel ist die Curta.
+        Division beherrschten – gab es in taschentauglicher Größe. Bekanntestes Beispiel ist die Curta.</p>
 
-        Vorläufer der elektronischen Taschenrechner waren elektronische Tischrechner, bei denen der
+        <p>Vorläufer der elektronischen Taschenrechner waren elektronische Tischrechner, bei denen der
         Integrationsgrad der Schaltungstechnik noch geringer war und die deshalb größere Dimensionen
-        aufwiesen.
+        aufwiesen.</p>
 
-        Der erste elektronische, tatsächlich handflächengroße Taschenrechner wurde 1967 von Texas
+        <p>Der erste elektronische, tatsächlich handflächengroße Taschenrechner wurde 1967 von Texas
         Instruments entwickelt.[1] Ein 1,5 kg schwerer Prototyp dieses ersten Taschenrechners ist
         heute in der Smithsonian Institution ausgestellt. Auch dieser lief schon mit Batterien,
         frühere Rechner benötigten einen Stromanschluss.
@@ -72,19 +74,19 @@
         1971 stellte Bowmar den ersten in den USA erhältlichen
         Taschenrechner her (Bowmar 901B/„Bowmar Brain“, Maße: 131 mm ×77 mm × 37 mm).
         Er hatte vier Funktionen und ein achtstelliges rotes LED-Display. Verkauft wurde er für 240 US$.
-        Bowmar musste 1976 schließen.
+        Bowmar musste 1976 schließen.</p>
 
-        1972 erschien mit dem HP-35 von Hewlett-Packard der erste technisch-wissenschaftliche
+        <p>1972 erschien mit dem HP-35 von Hewlett-Packard der erste technisch-wissenschaftliche
         Taschenrechner mit trigonometrischen, logarithmischen und Exponentialrechnungs-Funktionen. Er
         wurde ein Verkaufserfolg und leitete das Ende der damals noch weit verbreiteten Rechenschieber ein.
         Einer seiner Entwickler war Steve Wozniak, der wenige Jahre später das Unternehmen Apple mitgründete
-        und als Computer-Ingenieur die Entwicklung des Personal Computer maßgeblich beeinflusste.
+        und als Computer-Ingenieur die Entwicklung des Personal Computer maßgeblich beeinflusste.</p>
 
-        Vor allem Hewlett Packard und Texas Instruments entwickelten ab 1974 auch programmierbare
-        Taschenrechner.
+        <p>Vor allem Hewlett Packard und Texas Instruments entwickelten ab 1974 auch programmierbare
+        Taschenrechner.</p>
 
-        Numerische Genauigkeit:
-        Auch wenn heutige Taschenrechner im Regelfall kaum Programmfehler bei einfachen Berechnungen
+        <h3>Numerische Genauigkeit</h3>
+        <p>Auch wenn heutige Taschenrechner im Regelfall kaum Programmfehler bei einfachen Berechnungen
         aufweisen, lassen sich zwischen verschiedenen Taschenrechnermodellen unterschiedliche
         Genauigkeiten und Auflösungen bei numerischen Berechnungen bestimmen.
         Die Gründe liegen in den numerischen Näherungsverfahren (beispielsweise Horner-Schema und CORDIC),
@@ -92,18 +94,20 @@
         Genauer gesagt kommt es auf die Anzahl der abgespeicherten Koeffizienten für die Funktionsapproximationen an:
         der dafür benötigte Speicherplatz war vor allem in der Anfangszeit ein extremer Engpass.
         Diese kleinen Unterschiede in den Verfahren und unterschiedliche Genauigkeiten lassen sich auch
-        als Erkennungsmerkmal für eine bestimmte Firmware verwenden.
+        als Erkennungsmerkmal für eine bestimmte Firmware verwenden.</p>
 
-        Beispielsweise liefert die numerische Berechnung von sin (22) in Radiant auf verschiedenen
-        Taschenrechnern voneinander abweichende Ergebnisse.
+        <p>Beispielsweise liefert die numerische Berechnung von sin (22) in Radiant auf verschiedenen
+        Taschenrechnern voneinander abweichende Ergebnisse.</p>
 
-        Source Wikipedia: de.wikipedia.org/wiki/Taschenrechner (https://de.wikipedia.org/wiki/Taschenrechner)
+        <p><small>Source Wikipedia: <a href="de.wikipedia.org/wiki/Taschenrechner">https://de.wikipedia.org/wiki/Taschenrechner</a></small></p>
 
 
-        Demonstration
-        ¨¨¨¨¨¨¨¨¨¨¨¨¨
-        calculator/index.html
-        Casino Mini von 1972
+        <h2>Demonstration</h2>
+        <div>
+            <iframe src="calculator/index.html"></iframe>
+            <p>Casino Mini von 1972</p>
+        </div>
+
 
 
         Bedienung des TI-Nspire CX CAS
