added more stuff

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="author" content="Wikipraktika">
         <meta name="publisher" content="Wikipraktika">
         <meta name="description" content="Taschenrechner: tragbare, handliche elektronische Rechenmaschine">
-        <link rel="icon" href="./media/icon-wikipraktika.png">
+        <link rel="icon" href="../media/icon-wikipraktika.png">
 
 		<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 	</head>
 	<body>
 		<header>
-			<img src="./media/logo-wikipraktika.svg" />
+			<img src="../media/logo-wikipraktika.svg" />
 			<h1>Wikipraktika</h1>
 		</header>
 
@@ -41,7 +41,7 @@
         <p>Praktisch alle heutigen Taschenrechner verwenden elektronische Integrierte Schaltungen und
             LC-Displays als Anzeige und werden von einer Batterie oder Solarzelle mit Strom versorgt.</p>
         <div>
-            <img src="./media/900px-SCM_Marchant_calculator.jpg" />
+            <img src="../media/900px-SCM_Marchant_calculator.jpg" />
             <p>By <a href="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</p>
         </div>
 
