Added navigation structure.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,29 @@
 
 		<!-- TODO navigation-->
         <h1>Navigation</h1>
+        <nav>
+            <dl>
+                <dt><a href="#">Hauptseite</a></dt>
+                <dt><a href="#">Themenportale</a></dt>
+                <dt>Mitmachen</dt>
+                <dd><a href="#">Artikel verbessern</a></dd>
+                <dd><a href="#">Neuen Artikel anlegen</a></dd>
+                <dd><a href="#">Autorenportal</a></dd>
+                <dd><a href="#">Hilfe</a></dd>
+                <dd><a href="#">Letzte Änderungen</a></dd>
+                <dd><a href="#">Kontakt</a></dd>
+                <dd><a href="#">Spenden</a></dd>
+                <dt>Werkzeuge</dt>
+                <dd><a href="#">Links auf diese Seite</a></dd>
+                <dd><a href="#">Änderungen an verlinkten Seiten</a></dd>
+                <dd><a href="#">Permanenter Link</a></dd>
+                <dd><a href="#">Artikel zitieren</a></dd>
+                <dt>In anderen Sprachen</dt>
+                <dd><a href="#">Italiano</a></dd>
+                <dd><a href="#">Francais</a></dd>
+                <dd><a href="#">English</a></dd>
+            </dl>
+        </nav>
 
 
 		<main>
