Fixed ordering of calculators.

--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
             </ol>
 
             <p>Am schlechtesten schnitten die Geräte von HG ab:</p>
-            <ol start="78">
+            <ol start="78" reversed>
                 <li>HG Productive</li>
-                <li>77. HG Calc++</li>
+                <li>HG Calc++</li>
                 <li>HG GO-ON</li>
             </ol>
 
