Formatted the footer.

--- a/index.html
+++ b/index.html
@@ -303,16 +303,16 @@
         [Eingaben zurücksetzen]
         </section>
 
-        <section>
-        Bahnhofstrasse 42,
-        8000 Zürich
+        <footer>
+            <address>Bahnhofstrasse 42, 8000 Zürich</address>
+            <a href="tel:+41554443322">055 444 33 22</a>
+            <a href="mailto:info@wikipraktika.com">info@wikipraktika.com</a>
 
-        055 444 33 22
-        info@wikipraktika.com
-
-        Alle Inhalte von Wikipraktika stehen unter der |https://i.creativecommons.org/l/by-sa/4.0/88x31.png|
-        (http://creativecommons.org/licenses/by-sa/4.0/) Creative Commons Attribution-ShareAlike 4.0 International License
-        (http://creativecommons.org/licenses/by-sa/4.0/) und dürfen nur mit Nennung des Autors weiterverwendet werden.
-        </section>
-	</body>
+            <p>
+                Alle Inhalte von Wikipraktika stehen unter der <a href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                    src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt=""/> Creative Commons
+                Attribution-ShareAlike 4.0 International License</a> und dürfen nur mit Nennung des Autors
+                weiterverwendet werden.</p>
+        </footer>
+    </body>
 </html>
