--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                 können also etwa Gleichungen umstellen oder lösen.</p>
             <p>Praktisch alle heutigen Taschenrechner verwenden elektronische Integrierte Schaltungen und
                 LC-Displays als Anzeige und werden von einer Batterie oder Solarzelle mit Strom versorgt.</p>
-            <section>
+            <figure>
+                <!-- TODO add alt tags -->
                 <img src="../media/900px-SCM_Marchant_calculator.jpg" />
-                <p>By <a href="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</p>
-            </section>
+                <figcaption>By <a href="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</figcaption>
+            </figure>
 
             <h3>Geschichte</h3>
             <p>Bereits vor der Einführung der elektronischen Taschenrechner gab es einen Bedarf nach
