Translated model list into autocomplete.

--- a/index.html
+++ b/index.html
@@ -261,18 +261,21 @@
             <p><small>Zuletzt geändert von Petra SummerDonnerstag, 11. Februar 2016, 14:13</small></p>
         </section>
         <h2>Taschenrechner suchen nach Modell</h2>
-        [                     ]
-        Mexico Instrument TI 30
-        Mexico Instrument TI 32
-        Mexico Instrument D*D
-        Casino UX5
-        Casino TZZ
-        Casino Basic
-        HG Calc++
-        HG Productive
-        HG GO-ON
-
-        [search]
+        <form>
+            <datalist id="calculator-models">
+                <option value="Mexico Instrument TI 30">Mexico Instrument TI 30</option>
+                <option value="Mexico Instrument TI 32">Mexico Instrument TI 32</option>
+                <option value="Mexico Instrument D*D">Mexico Instrument D*D</option>
+                <option value="Casino UX5">Casino UX5</option>
+                <option value="Casino TZZ">Casino TZZ</option>
+                <option value="Casino Basic">Casino Basic</option>
+                <option value="HG Calc++">HG Calc++</option>
+                <option value="HG Productive">HG Productive</option>
+                <option value="HG GO-ON">HG GO-ON</option>
+            </datalist>
+            <input type="text" name="search-for" list="calculator-models" />
+            <button>search</button>
+        </form>
 
 
         <section>
