Changed footer to correct footer tags.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <p>Beispielsweise liefert die numerische Berechnung von sin (22) in Radiant auf verschiedenen
             Taschenrechnern voneinander abweichende Ergebnisse.</p>
 
-            <p><small>Source Wikipedia: <a href="de.wikipedia.org/wiki/Taschenrechner">https://de.wikipedia.org/wiki/Taschenrechner</a></small></p>
+            <footer><small>Source Wikipedia: <a href="de.wikipedia.org/wiki/Taschenrechner">https://de.wikipedia.org/wiki/Taschenrechner</a></small></footer>
         </section>
         <section>
             <h2>Demonstration</h2>
@@ -146,8 +146,8 @@
             <p>Von TheConnerdy, <a href=http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>,
             <a href="https://www.youtube.com/watch?v=6gKkz4VkSgk">via Youtube</a></p>
 
-            <p><small>Zuletzt geändert von Philipp Graf
-            Donnerstag, 11. Februar 2016, 12:45</small></p>
+            <footer><small>Zuletzt geändert von Philipp Graf
+            Donnerstag, 11. Februar 2016, 12:45</small></footer>
         </section>
         <section>
             <h2>Taschenrechnervarianten</h2>
@@ -184,8 +184,8 @@
             Taschenrechnervarianten, Source Wikipedia: de.wikipedia.org/wiki/Taschenrechner (https://de.wikipedia
             .org/wiki/Taschenrechner)
 
-            <p><small>Zuletzt geändert von Gabriela Kant
-            Donnerstag, 11. Februar 2016, 10:09</small></p>
+            <footer><small>Zuletzt geändert von Gabriela Kant
+            Donnerstag, 11. Februar 2016, 10:09</small></footer>
         </section>
 
         <section>
@@ -226,8 +226,8 @@
 
             ../media/zeitgewinn.svg
 
-            <p><small>Zuletzt geändert von Leandra Gross
-            Freitag, 29. Februar 2016, 13:02</small></p>
+            <footer><small>Zuletzt geändert von Leandra Gross
+            Freitag, 29. Februar 2016, 13:02</small></footer>
         </section>
 
         <section>
@@ -238,8 +238,8 @@
 
             <p>iPhone Calculator Tricks  on YouTube: <a href="https://www.youtube.com/watch?v=a7rcVgb41-0">youtube.com/watch?v=a7rcVgb41-0</a></p>
 
-            <p><small>Zuletzt geändert von Paul Sarner
-                Donnerstag, 10. Februar 2016, 18:38</small></p>
+            <footer><small>Zuletzt geändert von Paul Sarner
+                Donnerstag, 10. Februar 2016, 18:38</small></footer>
 
         </section>
         <section>
@@ -258,7 +258,7 @@
                 <li>HG GO-ON</li>
             </ol>
 
-            <p><small>Zuletzt geändert von Petra SummerDonnerstag, 11. Februar 2016, 14:13</small></p>
+            <footer><small>Zuletzt geändert von Petra SummerDonnerstag, 11. Februar 2016, 14:13</small></footer>
         </section>
         <h2>Taschenrechner suchen nach Modell</h2>
         <form>
