Renamed field labels of profile.

--- a/index.html
+++ b/index.html
@@ -318,12 +318,12 @@
                             </select>
                         </div>
                         <div>
-                            <label for="profile-desc">Name</label>
+                            <label for="profile-desc">Profiltext</label>
                             <textarea id="profile-desc" name="profile-desc"></textarea>
                         </div>
                         <div>
-                            <label for="profile-image">Name</label>
-                            <input type="file" id="profile-image" name="profile-image" accept="image/*" required />
+                            <label for="profile-image">Profilbilder</label>
+                            <input type="file" id="profile-image" name="profile-image" accept="image/*" />
                         </div>
                     </fieldset>
 
