--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</header>
 
 		<!-- TODO navigation-->
-        <h1>Navigation</h1>
         <nav>
+            <h1>Navigation</h1>
             <dl>
                 <dt><a href="#">Hauptseite</a></dt>
                 <dt><a href="#">Themenportale</a></dt>
@@ -54,7 +54,7 @@
 
             <h1>Taschenrechner</h1>
             <section>
-                <h2>Taschenrechner</h2>
+                <h1>Taschenrechner</h1>
                 <p>Ein Taschenrechner ist eine tragbare, handliche elektronische Rechenmaschine,
                     mit deren Hilfe numerische Berechnungen ausgeführt werden können.
                     Einige neuere technisch-wissenschaftliche Taschenrechner beherrschen auch symbolische Mathematik mittels eines Computeralgebrasystems (CAS),
@@ -63,11 +63,11 @@
                     LC-Displays als Anzeige und werden von einer Batterie oder Solarzelle mit Strom versorgt.</p>
                 <figure>
                     <!-- TODO add alt tags -->
-                    <img src="../media/900px-SCM_Marchant_calculator.jpg" />
+                    <img src="../media/900px-SCM_Marchant_calculator.jpg" alt="SCM Marchant Calculator"/>
                     <figcaption>By <a href="commons.wikimedia.org/wiki/User:Bilby">Bilby</a> - Own work, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> https://commons.wikimedia.org/w/index.php?curid=10980797</figcaption>
                 </figure>
 
-                <h3>Geschichte</h3>
+                <h2>Geschichte</h2>
                 <p>Bereits vor der Einführung der elektronischen Taschenrechner gab es einen Bedarf nach
                 tragbaren Rechenhilfen. Dieser wurde mit mechanischen Taschenrechnern und Rechenschiebern
                 befriedigt. Meist handelte es sich dabei um einfache Addiermaschinen. Auch
@@ -107,7 +107,7 @@
                 <p>Vor allem Hewlett Packard und Texas Instruments entwickelten ab 1974 auch programmierbare
                 Taschenrechner.</p>
 
-                <h3>Numerische Genauigkeit</h3>
+                <h2>Numerische Genauigkeit</h2>
                 <p>Auch wenn heutige Taschenrechner im Regelfall kaum Programmfehler bei einfachen Berechnungen
                 aufweisen, lassen sich zwischen verschiedenen Taschenrechnermodellen unterschiedliche
                 Genauigkeiten und Auflösungen bei numerischen Berechnungen bestimmen.
@@ -124,14 +124,14 @@
                 <footer><small>Source Wikipedia: <a href="de.wikipedia.org/wiki/Taschenrechner">https://de.wikipedia.org/wiki/Taschenrechner</a></small></footer>
             </section>
             <section>
-                <h2>Demonstration</h2>
+                <h1>Demonstration</h1>
                 <section>
                     <iframe src="calculator/index.html"></iframe>
                     <p><small>Casino Mini von 1972</small></p>
                 </section>
             </section>
             <section>
-                <h2>Bedienung des TI-Nspire CX CAS</h2>
+                <h1>Bedienung des TI-Nspire CX CAS</h1>
                 <video controls poster="../media/ti-nspire-cx-cas.png">
                         <source src="../media/TI-Nspire%20CX%20CAS%203D%20Model.mp4" type="video/mp4">
                         <source src="../media/TI-Nspire%20CX%20CAS%203D%20Model.webm" type="video/webm">
@@ -143,12 +143,14 @@
                 <p>Von TheConnerdy, <a href="http://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>,
                 <a href="https://www.youtube.com/watch?v=6gKkz4VkSgk">via Youtube</a></p>
 
-                <footer><small>Zuletzt geändert von Philipp Graf
-                Donnerstag, 11. Februar 2016, 12:45</small></footer>
+                <footer>
+                    <small>Zuletzt geändert von Philipp Graf</small>
+                    <small class="date">Donnerstag, 11. Februar 2016, 12:45</small>
+                </footer>
             </section>
             <section>
-                <h2>Taschenrechnervarianten</h2>
-                <h4>Einfach</h4>
+                <h1>Taschenrechnervarianten</h1>
+                <h3>Einfach</h3>
                 <ul>
                     <li></li>
                 </ul>
@@ -181,12 +183,14 @@
                 Taschenrechnervarianten, Source Wikipedia: de.wikipedia.org/wiki/Taschenrechner (https://de.wikipedia
                 .org/wiki/Taschenrechner)
 
-                <footer><small>Zuletzt geändert von Gabriela Kant
-                Donnerstag, 11. Februar 2016, 10:09</small></footer>
+                <footer>
+                    <small>Zuletzt geändert von Gabriela Kant</small>
+                    <small class="date">Donnerstag, 11. Februar 2016, 10:09</small>
+                </footer>
             </section>
 
             <section>
-                <h2>Zeitgewinn</h2>
+                <h1>Zeitgewinn</h1>
 
                 <table>
                     <caption>Zeitgewinn durch Benutzung eines Taschenrechners</caption>
@@ -223,24 +227,28 @@
 
                 ../media/zeitgewinn.svg
 
-                <footer><small>Zuletzt geändert von Leandra Gross
-                Freitag, 29. Februar 2016, 13:02</small></footer>
+                <footer>
+                    <small>Zuletzt geändert von Leandra Gross</small>
+                    <small class="date">Freitag, 29. Februar 2016, 13:02</small>
+                </footer>
             </section>
 
             <section>
-                <h2>iPhone calculator tricks</h2>
+                <h1>iPhone calculator tricks</h1>
                 <iframe width="420" height="315"
                         src="https://www.youtube.com/embed/a7rcVgb41-0">
                 </iframe>
 
                 <p>iPhone Calculator Tricks  on YouTube: <a href="https://www.youtube.com/watch?v=a7rcVgb41-0">youtube.com/watch?v=a7rcVgb41-0</a></p>
 
-                <footer><small>Zuletzt geändert von Paul Sarner
-                    Donnerstag, 10. Februar 2016, 18:38</small></footer>
+                <footer>
+                    <small>Zuletzt geändert von Paul Sarner</small>
+                    <small class="date">Donnerstag, 10. Februar 2016, 18:38</small>
+                </footer>
 
             </section>
             <section>
-                <h2>Die besten und schlechtesten Taschenrechner</h2>
+                <h1>Die besten und schlechtesten Taschenrechner</h1>
                 <p>In einer 2014 durchgeführten Benutzerbefragung schnitten die Modelle von Casino am Besten ab:</p>
                 <ol>
                     <li>Casino UX5</li>
@@ -255,28 +263,31 @@
                     <li>HG GO-ON</li>
                 </ol>
 
-                <footer><small>Zuletzt geändert von Petra SummerDonnerstag, 11. Februar 2016, 14:13</small></footer>
+                <footer>
+                    <small>Zuletzt geändert von Petra Summer</small>
+                    <small class="date">Donnerstag, 11. Februar 2016, 14:13</small>
+                </footer>
             </section>
-            <h2>Taschenrechner suchen nach Modell</h2>
-            <form>
-                <datalist id="calculator-models">
-                    <option value="Mexico Instrument TI 30">Mexico Instrument TI 30</option>
-                    <option value="Mexico Instrument TI 32">Mexico Instrument TI 32</option>
-                    <option value="Mexico Instrument D*D">Mexico Instrument D*D</option>
-                    <option value="Casino UX5">Casino UX5</option>
-                    <option value="Casino TZZ">Casino TZZ</option>
-                    <option value="Casino Basic">Casino Basic</option>
-                    <option value="HG Calc++">HG Calc++</option>
-                    <option value="HG Productive">HG Productive</option>
-                    <option value="HG GO-ON">HG GO-ON</option>
-                </datalist>
-                <input type="text" name="search-for" list="calculator-models" />
-                <button>search</button>
-            </form>
-
-
             <section>
-            <h2>Neuen Autor registrieren</h2>
+                <h1>Taschenrechner suchen nach Modell</h1>
+                <form>
+                    <datalist id="calculator-models">
+                        <option value="Mexico Instrument TI 30">Mexico Instrument TI 30</option>
+                        <option value="Mexico Instrument TI 32">Mexico Instrument TI 32</option>
+                        <option value="Mexico Instrument D*D">Mexico Instrument D*D</option>
+                        <option value="Casino UX5">Casino UX5</option>
+                        <option value="Casino TZZ">Casino TZZ</option>
+                        <option value="Casino Basic">Casino Basic</option>
+                        <option value="HG Calc++">HG Calc++</option>
+                        <option value="HG Productive">HG Productive</option>
+                        <option value="HG GO-ON">HG GO-ON</option>
+                    </datalist>
+                    <input type="text" name="search-for" list="calculator-models" />
+                    <button>search</button>
+                </form>
+            </section>
+            <section>
+            <h1>Neuen Autor registrieren</h1>
 
                 <!-- TODO check validation -->
                 <form>
