--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <dd><a href="#">Permanenter Link</a></dd>
                 <dd><a href="#">Artikel zitieren</a></dd>
                 <dt>In anderen Sprachen</dt>
-                <dd><a href="#">Italiano</a></dd>
-                <dd><a href="#">Francais</a></dd>
-                <dd><a href="#">English</a></dd>
+                <dd><a href="#" hreflang="lang-it">Italiano</a></dd>
+                <dd><a href="#" hreflang="lang-fr">Francais</a></dd>
+                <dd><a href="#" hreflang="lang-en">English</a></dd>
             </dl>
         </nav>
 
@@ -225,7 +225,7 @@
                     </tbody>
                 </table>
 
-                ../media/zeitgewinn.svg
+                <img src="../media/zeitgewinn.svg" />
 
                 <footer>
                     <small>Zuletzt geändert von Leandra Gross</small>
