--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
             <section>
                 <h1>iPhone calculator tricks</h1>
-                <iframe width="420" height="315"
+                <iframe
                         src="https://www.youtube.com/embed/a7rcVgb41-0">
                 </iframe>
 
