formular wiiter optimiert

--- a/index.html
+++ b/index.html
@@ -349,11 +349,16 @@
 
                     <fieldset id="rechtlichesFieldSet">
                         <legend>Rechtliches</legend>
-                        <input type="checkbox" id="checkboxTextOriginator"/><label for="checkboxTextOriginator">Ich bestätige, das ich keine Texte veröffentlichen werde, deren Urheber ich nicht bin</label>
-                        <input type="checkbox" id="checkboxMediaOriginator"/><label for="checkboxMediaOriginator">Ich bestätige, das ich keine Medien veröffentlichen werden, deren Urheber ich nicht bin</label>
-                        <input type="checkbox" id="checkboxTruth"/><label for="checkboxTruth">Ich bestätige, das nur Texte veröffentlichen werde, die nach bestem Treu und glauben der Wahrheit entsprechen und
-                        eingereichte Medien Bilder nicht manipuliert wurden</label>
-
+                        <div>
+                            <input type="checkbox" id="checkboxTextOriginator"/><label for="checkboxTextOriginator">Ich bestätige, das ich keine Texte veröffentlichen werde, deren Urheber ich nicht bin</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="checkboxMediaOriginator"/><label for="checkboxMediaOriginator">Ich bestätige, das ich keine Medien veröffentlichen werden, deren Urheber ich nicht bin</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="checkboxTruth"/><label for="checkboxTruth">Ich bestätige, das nur Texte veröffentlichen werde, die nach bestem Treu und glauben der Wahrheit entsprechen und
+                            eingereichte Medien Bilder nicht manipuliert wurden</label>
+                        </div>
                     </fieldset>
 
             <button type="submit">Account anlegen</button>
