Improved styling of footer and input size.

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <option value="HG GO-ON">HG GO-ON</option>
                     </datalist>
                     <input id="calculator-search" type="text" name="search-for" list="calculator-models" />
-                    <button><img src="../media/icon-search.svg" alt="" />search</button>
+                    <button><img src="../media/icon-search.svg" alt="" /> Search</button>
                 </form>
             </section>
             <section>
