--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	</head>
 	<body>
 		<header class="clearfix">
-			<img src="../media/logo-wikipraktika.svg" alt=""/>
+            <a href="index.html">
+			    <img src="../media/logo-wikipraktika.svg" alt=""/>
+            </a>
 			<h1>Wikipraktika</h1>
 		</header>
         <nav>
