Added font slider. Fixed dt format.

--- a/index.html
+++ b/index.html
@@ -387,5 +387,8 @@
                 Attribution-ShareAlike 4.0 International License</a> und dürfen nur mit Nennung des Autors
                 weiterverwendet werden.</p>
         </footer>
+
+    <script src="./scripts/font-size.js"></script>
+
     </body>
 </html>
